hphp/test/slow/using/bad-closure.php.expectf
Fatal error: Call to undefined method Closure$%S::__dispose() in %s/test/slow/using/bad-closure.php on line 3
